--- a/bidder-auction-details-closed-won.html
+++ b/bidder-auction-details-closed-won.html
@@ -133,13 +133,13 @@
           <div>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</div>
           <div class="row row-1 align-items-center py-2 mb-4">
             <div class="col-auto">
-              <a href="#!" class="a-property"><img src="img/property1.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">House</span></a>
+              <a href="#!" class="a-property"><img src="img/property1.svg" alt="" class="align-middle"><span class="pl-1 align-middle">House</span></a>
             </div>
             <div class="col-auto">
-              <a href="#!" class="a-property"><img src="img/property2.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">350 sqm</span></a>
+              <a href="#!" class="a-property"><img src="img/property2.svg" alt="" class="align-middle"><span class="pl-1 align-middle">350 sqm</span></a>
             </div>
             <div class="col-auto">
-              <a href="#!" class="a-property"><img src="img/property5.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">SAR 2500 per sqm</span></a>
+              <a href="#!" class="a-property"><img src="img/property5.svg" alt="" class="align-middle"><span class="pl-1 align-middle">SAR 2500 per sqm</span></a>
             </div>
           </div> 
           <div class="fz-32 font-weight-bold lh-12 mb-3">Location</div>
