--- a/bidder-my-bids.html
+++ b/bidder-my-bids.html
@@ -94,16 +94,16 @@
               </div>
               <div class="row row-1 align-items-center">
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property1.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Property type</span></a>
+                  <a href="#!" class="a-property"><img src="img/property1.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property type</span></a>
                 </div>
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property2.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Property size</span></a>
+                  <a href="#!" class="a-property"><img src="img/property2.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property size</span></a>
                 </div>
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property3.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Property address - neighbourhood, city</span></a>
+                  <a href="#!" class="a-property"><img src="img/property3.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property address - neighbourhood, city</span></a>
                 </div>
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property4.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Auctioneer company name and logo</span></a>
+                  <a href="#!" class="a-property"><img src="img/property4.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Auctioneer company name and logo</span></a>
                 </div>
               </div>
             </div>
@@ -138,16 +138,16 @@
               </div>
               <div class="row row-1 align-items-center">
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property1.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Property type</span></a>
+                  <a href="#!" class="a-property"><img src="img/property1.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property type</span></a>
                 </div>
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property2.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Property size</span></a>
+                  <a href="#!" class="a-property"><img src="img/property2.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property size</span></a>
                 </div>
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property3.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Property address - neighbourhood, city</span></a>
+                  <a href="#!" class="a-property"><img src="img/property3.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property address - neighbourhood, city</span></a>
                 </div>
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property4.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Auctioneer company name and logo</span></a>
+                  <a href="#!" class="a-property"><img src="img/property4.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Auctioneer company name and logo</span></a>
                 </div>
               </div>
             </div>
@@ -182,16 +182,16 @@
               </div>
               <div class="row row-1 align-items-center">
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property1.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Property type</span></a>
+                  <a href="#!" class="a-property"><img src="img/property1.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property type</span></a>
                 </div>
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property2.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Property size</span></a>
+                  <a href="#!" class="a-property"><img src="img/property2.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property size</span></a>
                 </div>
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property3.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Property address - neighbourhood, city</span></a>
+                  <a href="#!" class="a-property"><img src="img/property3.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property address - neighbourhood, city</span></a>
                 </div>
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property4.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Auctioneer company name and logo</span></a>
+                  <a href="#!" class="a-property"><img src="img/property4.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Auctioneer company name and logo</span></a>
                 </div>
               </div>
             </div>
@@ -226,16 +226,16 @@
               </div>
               <div class="row row-1 align-items-center">
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property1.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Property type</span></a>
+                  <a href="#!" class="a-property"><img src="img/property1.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property type</span></a>
                 </div>
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property2.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Property size</span></a>
+                  <a href="#!" class="a-property"><img src="img/property2.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property size</span></a>
                 </div>
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property3.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Property address - neighbourhood, city</span></a>
+                  <a href="#!" class="a-property"><img src="img/property3.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property address - neighbourhood, city</span></a>
                 </div>
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property4.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Auctioneer company name and logo</span></a>
+                  <a href="#!" class="a-property"><img src="img/property4.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Auctioneer company name and logo</span></a>
                 </div>
               </div>
             </div>
@@ -269,16 +269,16 @@
               </div>
               <div class="row row-1 align-items-center">
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property1.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Property type</span></a>
+                  <a href="#!" class="a-property"><img src="img/property1.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property type</span></a>
                 </div>
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property2.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Property size</span></a>
+                  <a href="#!" class="a-property"><img src="img/property2.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property size</span></a>
                 </div>
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property3.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Property address - neighbourhood, city</span></a>
+                  <a href="#!" class="a-property"><img src="img/property3.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property address - neighbourhood, city</span></a>
                 </div>
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property4.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Auctioneer company name and logo</span></a>
+                  <a href="#!" class="a-property"><img src="img/property4.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Auctioneer company name and logo</span></a>
                 </div>
               </div>
             </div>
@@ -313,16 +313,16 @@
               </div>
               <div class="row row-1 align-items-center">
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property1.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Property type</span></a>
+                  <a href="#!" class="a-property"><img src="img/property1.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property type</span></a>
                 </div>
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property2.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Property size</span></a>
+                  <a href="#!" class="a-property"><img src="img/property2.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property size</span></a>
                 </div>
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property3.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Property address - neighbourhood, city</span></a>
+                  <a href="#!" class="a-property"><img src="img/property3.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property address - neighbourhood, city</span></a>
                 </div>
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property4.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Auctioneer company name and logo</span></a>
+                  <a href="#!" class="a-property"><img src="img/property4.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Auctioneer company name and logo</span></a>
                 </div>
               </div>
             </div>
@@ -357,16 +357,16 @@
               </div>
               <div class="row row-1 align-items-center">
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property1.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Property type</span></a>
+                  <a href="#!" class="a-property"><img src="img/property1.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property type</span></a>
                 </div>
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property2.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Property size</span></a>
+                  <a href="#!" class="a-property"><img src="img/property2.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property size</span></a>
                 </div>
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property3.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Property address - neighbourhood, city</span></a>
+                  <a href="#!" class="a-property"><img src="img/property3.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property address - neighbourhood, city</span></a>
                 </div>
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property4.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Auctioneer company name and logo</span></a>
+                  <a href="#!" class="a-property"><img src="img/property4.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Auctioneer company name and logo</span></a>
                 </div>
               </div>
             </div>
@@ -401,16 +401,16 @@
               </div>
               <div class="row row-1 align-items-center">
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property1.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Property type</span></a>
+                  <a href="#!" class="a-property"><img src="img/property1.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property type</span></a>
                 </div>
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property2.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Property size</span></a>
+                  <a href="#!" class="a-property"><img src="img/property2.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property size</span></a>
                 </div>
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property3.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Property address - neighbourhood, city</span></a>
+                  <a href="#!" class="a-property"><img src="img/property3.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property address - neighbourhood, city</span></a>
                 </div>
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property4.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Auctioneer company name and logo</span></a>
+                  <a href="#!" class="a-property"><img src="img/property4.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Auctioneer company name and logo</span></a>
                 </div>
               </div>
             </div>
@@ -445,16 +445,16 @@
               </div>
               <div class="row row-1 align-items-center">
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property1.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Property type</span></a>
+                  <a href="#!" class="a-property"><img src="img/property1.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property type</span></a>
                 </div>
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property2.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Property size</span></a>
+                  <a href="#!" class="a-property"><img src="img/property2.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property size</span></a>
                 </div>
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property3.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Property address - neighbourhood, city</span></a>
+                  <a href="#!" class="a-property"><img src="img/property3.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property address - neighbourhood, city</span></a>
                 </div>
                 <div class="col-auto">
-                  <a href="#!" class="a-property"><img src="img/property4.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Auctioneer company name and logo</span></a>
+                  <a href="#!" class="a-property"><img src="img/property4.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Auctioneer company name and logo</span></a>
                 </div>
               </div>
             </div>
