--- a/bidder-my-bids-placeholder.html
+++ b/bidder-my-bids-placeholder.html
@@ -64,7 +64,7 @@
           <div class="card card-signup text-center">
             <div class="row justify-content-center align-items-center mb-4">
               <div class="col-auto">
-                <div class="block-gray d-flex">
+                <div class="block-gray-img d-flex">
                   <div class="m-auto">
                     <img src="img/mountains.svg" alt="">
                   </div>
